Alpha release - improve speed of data querying - add study programs - add ability to change password - add infinite scrolling - improve UI - fix bugs - refactoring